# LintDB

./: .buildinfo  .bumpversion.cfg  .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  api.html  benchmarks.html  colbert_profile2  conanfile.py  genindex.html  index.html  installation.html  lintdb.html  mkdocs.yml  modules.html  py-modindex.html  pyproject.toml  python.html  requirements.txt  searchindex.js  sitemap.xml  usage.html  vcpkg.json  versions.json
_build_python_/: CMakeCache.txt  Makefile  cmake_install.cmake
_sources/: lintdb.rst.txt  modules.rst.txt  python.rst.txt
benchmarks/: CMakeLists.txt  bench_lintdb.cpp  bench_lintdb.py  common.py  pixi.toml  pyproject.toml  run_colbert.py  run_lintdb.py
benchmarks/lotte/: common.py  compare_clustering.py  debug_colbert.py  indexing.py  indexing_two.py  main.py  multiprocess_indexing.py
benchmarks/miracl/: indexing.py  main.py
benchmarks/vidore/: main.py
benchmarks/xtr/: main.py  xtr.py
build_benchmarks/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: FindCTPL.cmake  FindMKL.cmake  FindMLAS.cmake
conda/: benchmark_env.yaml  conda_build_config.yaml  environment.yaml
develop/: 404.html  environment.yaml  index.html  objects.inv  sitemap.xml
development/: index.html
docker/: Dockerfile  Dockerfile.build  Dockerfile.conda.build  entrypoint.sh
docs/: development.md  examples.md  getting-started.md  installation.md  nav.md  reference.md  requirements.txt
getting-started/: index.html
installation/: index.html
lintdb/: Binarizer.cpp  Binarizer.h  CMakeLists.txt  Collection.cpp  Collection.h  EmbeddingBlock.h  Encoder.cpp  Encoder.h  EncoderV2.cpp  EncoderV2.h  Passages.h  RawPassage.h  ResidualQuantizer.cpp  ResidualQuantizer.h  SearchOptions.h  SearchResult.h  api.h  assert.h  binarizer.h  cf.h  constants.h  env.h  example.cpp  example.h  exception.h  index.cpp  index.h  index_io.h  plaid.cpp  plaid.h  quantizer.h  util.cpp  util.h  version.h  version.h.in
lintdb/index_builder/: EmbeddingModel.cpp  EmbeddingModel.h  Tokenizer.cpp  Tokenizer.h
lintdb/invlists/: ContextIerator.cpp  ContextIterator.h  EncodedDocument.cpp  EncodedDocument.h  FlatList.h  ForwardIndexIterator.cpp  ForwardIndexIterator.h  IndexWriter.cpp  IndexWriter.h  InvertedIterator.cpp  InvertedIterator.h  InvertedList.h  InvertedLists.cpp  InvertedLists.h  Iterator.h  KeyBuilder.h  PostingData.h  RocksdbForwardIndex.cpp  RocksdbForwardIndex.h  RocksdbInvertedList.cpp  RocksdbInvertedList.h  RocksdbInvertedListV2.cpp  RocksdbInvertedListV2.h  RocksdbList.cpp  RocksdbList.h  TantivyInvertedList.cpp  TantivyInvertedList.h  keys.cpp  keys.h  util.cpp  util.h
lintdb/python/: CMakeLists.txt  __init__.py  document.py  index.py  lintdb.py  lintdb.swig  pylintdb.cpp  schema.py  setup.py  std_unique_ptr.i
lintdb/python/tests/: test_index.py
lintdb/quantizers/: Binarizer.cpp  Binarizer.h  CoarseQuantizer.cpp  CoarseQuantizer.h  IdentityQuantizer.cpp  IdentityQuantizer.h  InvertedListScanner.cpp  InvertedListScanner.h  PQDistanceTables.cpp  PQDistanceTables.h  ProductEncoder.cpp  ProductEncoder.h  Quantizer.h  io.cpp  io.h
lintdb/quantizers/impl/: kmeans.cpp  kmeans.h  product_quantizer.h
lintdb/query/: DocIterator.cpp  DocIterator.h  DocValue.h  KnnNearestCentroids.cpp  KnnNearestCentroids.h  Query.cpp  Query.h  QueryContext.h  QueryExecutor.cpp  QueryExecutor.h  QueryNode.cpp  QueryNode.h  decode.cpp  decode.h
lintdb/retriever/: EMVBRetriever.cpp  EMVBRetriever.h  PlaidRetriever.cpp  PlaidRetriever.h  Retriever.h  XTRRetriever.cpp  XTRRetriever.h  emvb.h  emvb_avx.h  emvb_generic.h  emvb_util.h  plaid.cpp  plaid.h
lintdb/retrievers/: EMVBRetriever.cpp  EMVBRetriever.h  PlaidRetriever.cpp  PlaidRetriever.h  Retriever.h  XTRRetriever.cpp  XTRRetriever.h  emvb.h  emvb_avx.h  emvb_generic.h  emvb_util.h  plaid.cpp  plaid.h
lintdb/schema/: DataTypes.h  DocEncoder.cpp  DocEncoder.h  DocProcessor.cpp  DocProcessor.h  Document.h  FieldMapper.cpp  FieldMapper.h  ProcessedData.h  Schema.cpp  Schema.h  forward_index.fbs  forward_index_generated.h  inverted_index.fbs  inverted_index_generated.h  mapping.fbs  mapping_generated.h  schema.fbs  schema.pb.cc  schema.pb.h  schema.proto  schema_generated.h  util.cpp  util.h
lintdb/scoring/: ContextCollector.cpp  ContextCollector.h  ScoredDocument.h  Scorer.cpp  Scorer.h  plaid.cpp  scoring_methods.cpp  scoring_methods.h
lintdb/server/: CMakeLists.txt  api_tests.py  main.cpp  openapi.yaml
lintdb/server/controllers/v1/: Index.cpp  Index.h  query_node_translator.h  result_translator.h
lintdb/utils/: assert.h  endian.h  exception.h  half.h  math.h  progress_bar.h
nav/: index.html
reference/: index.html
tests/: CMakeLists.txt  binarizer_test.cpp  coarse_quantizer_test.cpp  colbert_test.cpp  doc_encoder_test.cpp  doc_iterator_test.cpp  doc_processor_test.cpp  encoded_doc_test.cpp  encoder_test.cpp  example_test.cpp  index_builder_test.cpp  index_test.cpp  inverted_list_test.cpp  keys_test.cpp  kmeans_test.cpp  mocks.h  plaid_test.cpp  product_quantizer_test.cpp  quantizer_test.cpp  rocksdb_test.cpp  runner.py  runner_colbert.py  search_bin.cpp  test_index.py  util.h  xtr_test.cpp
tests/data/: colbert.ranking.tsv  query.txt
tests/data/colbert_test.db/: 000008.sst  000009.sst  000010.sst  000011.sst  IDENTITY  LOG  LOG.old.1722800135830059  LOG.old.1722800216294444  LOG.old.1722800296371779  LOG.old.1722800437955832  LOG.old.1722800493660601  LOG.old.1722917400856599  MANIFEST-000029  MANIFEST-000033  MANIFEST-000177  _field_mapper.json  _lintdb_metadata.json  _schema.json  colbert_quantizer
tests/data/testdb/: 000008.sst  000009.sst  000010.sst  000011.sst  000012.sst  CURRENT  IDENTITY  LOG  LOG.old.1719336309913747  LOG.old.1719336737008734  LOG.old.1719337551245419  MANIFEST-000022  MANIFEST-000126  OPTIONS-000020  _lintdb_metadata.json
v0.2.1/: .clang-format  genindex.html  modules.html  objects.inv  searchindex.js  sitemap.xml  usage.html
v0.3.0/: .buildinfo  api.html  benchmarks.html  genindex.html  (+10 more)
(+69 files in other folders)
