[tool.poetry]
name = "lintdb-docs"
version = "0.1.0"
description = "documentation for LintDB"
authors = ["DeployQL"]
readme = "README.md"
packages = [{include = "lintdb_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.2.0"
sphinx-immaterial = "^0.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
