[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = "benchmark LintDB"
authors = ["Matt Barta <mtbarta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
colbert-ir = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
