[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = "benchmark LintDB"
authors = ["Matt Barta <matt@deployql.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
colbert-ai = "^0.2.14"
pytorch
faiss
"git+https://github.com/illuin-tech/colpali"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyperformance]
manifest = "MANIFEST"